--- a/docs/memoria-TFG/capitulos/02_TrabajoDesarrollado.tex
+++ b/docs/memoria-TFG/capitulos/02_TrabajoDesarrollado.tex
@@ -4,7 +4,7 @@ En este capítulo se explican las funcionalidades básicas del simulador desarro
 
 \section{Resumen del simulador}
 
-El simulador RecSim permite representar escenarios adaptados a las necesidades de simulación existentes. Un escenario se compone de un mapa y de un conjunto de objetos, y puede definirse sobre cualquier mapa real existente en OpenStreetMap: el usuario puede utilizar un buscador para ver un mapa y luego seleccionar dentro de dicho mapa el área geográfica de interés. Además, se pueden definir tipos de objetos estáticos (por ejemplo, restaurantes, hoteles, cines, etc.) y tipos de objetos dinámicos o móviles (por ejemplo, taxis, buses,ambulancias, etc.), asociándoles un nombre de tipo y un icono que se utilizará para representar instancias de dicho tipo de objeto en un mapa. Luego pueden colocarse en un escenario objetos estáticos y dinámicos de los tipos deseados: los objetos estáticos se colocan en la posición deseada sobre el mapa y a los objetos dinámicos se les asigna una determinada trayectoria o un comportamiento de movimientos aleatorios. Alternativamente, pueden importarse datos acerca de objetos estáticos o dinámicos definidos en ficheros externos. Sobre el mapa se representa también un usuario móvil, que puede desplazarse utilizando el teclado (sin necesidad de que el usuario real cambie físicamente de lugar) o bien desplazarse físicamente (en cuyo caso las coordenadas se obtienen de un receptor GPS ligado al equipo).
+El simulador RecSim permite representar escenarios adaptados a las necesidades de simulación existentes para evaluar distintos tipos de sistemas de recomendación. Un escenario se compone de un mapa y de un conjunto de objetos, y puede definirse sobre cualquier mapa real existente en OpenStreetMap: el usuario puede utilizar un buscador para ver un mapa y luego seleccionar dentro de dicho mapa el área geográfica de interés. Además, se pueden definir tipos de objetos estáticos (por ejemplo, restaurantes, hoteles, cines, etc.) y tipos de objetos dinámicos o móviles (por ejemplo, taxis, buses,ambulancias, etc.), asociándoles un nombre de tipo y un icono que se utilizará para representar instancias de dicho tipo de objeto en un mapa. Luego pueden colocarse en un escenario objetos estáticos y dinámicos de los tipos deseados: los objetos estáticos se colocan en la posición deseada sobre el mapa y a los objetos dinámicos se les asigna una determinada trayectoria o un comportamiento de movimientos aleatorios. Alternativamente, pueden importarse datos acerca de objetos estáticos o dinámicos definidos en ficheros externos. Sobre el mapa se representa también un usuario móvil, que puede desplazarse utilizando el teclado (sin necesidad de que el usuario real cambie físicamente de lugar) o bien desplazarse físicamente (en cuyo caso las coordenadas se obtienen de un receptor GPS ligado al equipo).
 
 Un aspecto clave es que podemos simular esos escenarios móviles y al mismo tiempo poner en funcionamiento sistemas de recomendación que proporcionan recomendaciones al usuario. El usuario puede valorar ítems, de forma que el sistema de recomendación puede ir aprendiendo los gustos del usuario y aumentando la información del conjunto de datos de valoraciones disponible. Es posible exportar resultados referentes a los errores cometidos por el sistema de recomendación al valorar ítems y generar gráficas sencillas desde el mismo simulador
 
