--- a/docs/memoria-TFG/capitulos/04_GestionProyecto.tex
+++ b/docs/memoria-TFG/capitulos/04_GestionProyecto.tex
@@ -5,9 +5,9 @@ En este capítulo se explican el modelo de proceso seleccionado y las distintas 
 \section{Modelo de proceso seleccionado}
 
 
-Este Trabajo Fin de Grado ha surgido una importante evolución desde el primer planteamiento hasta la obtención del sistema final. La primera idea para la evaluación de los algoritmos de recomendaciones era la utilización de un videojuego ya que este podría recolectar datos de forma transparente mientras los usuarios se divertian. El videojuego consistiría en el cumplimiento de misiones en una cuidad basandose en algún videojuego de aventuras como el videojuego Paperboy del año 1985 donde un chico reparte periódicos en una cuidad.
+Este Trabajo Fin de Grado ha surgido una importante evolución desde el primer planteamiento hasta la obtención del sistema final. La primera idea para la evaluación de los algoritmos de recomendaciones era la utilización de un videojuego ya que este podría recolectar datos de forma transparente mientras los usuarios se divertían. El videojuego consistiría en el cumplimiento de misiones en una cuidad basandose en algún videojuego de aventuras como el videojuego Paperboy del año 1985 donde un chico reparte periódicos en una cuidad.
 
-Por esto se ha planteado usar el motor gráfico Unity 5 para el desarrollo del videojuego ya que no tenía sentido desarrollar un videojuego usando simplemente un lenguaje de programación. Pero existía la incertidumbre si todos los requisitos podrían ser implementados. Esto era debido porque por una parte no se conocían de antemano todos los requisitos y por otra no se conocía si el motor gráfico tenía algún tipo de limite. 
+Por esto el primer planteamiento era usar el motor gráfico Unity 5 para el desarrollo del videojuego ya que no tenía sentido desarrollar un videojuego usando simplemente un lenguaje de programación. Pero existía la incertidumbre si todos los requisitos podrían ser implementados. Esto era debido porque por una parte no se conocían de antemano todos los requisitos y por otra no se conocía si el motor gráfico tenía algún tipo de limite. 
 
 Para solucionar estos problemas se ha tomado la decisión de elegir el modelo en espiral como modelo de trabajo. Las actividades de este modelo forman una espiral de tal forma que cada iteración representa un conjunto de actividades. Esto nos permitiría segmentar el trabajo en tareas más pequeñas e ir definiendo los requisitos mientras se desarrollaba el videojuego. De esta manera podríamos evaluar si los requisitos propuestos podrían o no ser implementados con Unity 5. En caso de que el motor gráfico tuviese algún límite tendríamos la capacidad de reorientar el proyecto.
 
@@ -174,12 +174,16 @@ Fase 1 & 54\\ \hline
 Fase 2 & 6.5\\ \hline
 Fase 3 & 38\\ \hline
 Fase 4 & 3.5\\ \hline
-Fase 5 & 247\\ \hline
-Fase 6 & 42.5\\ \hline
-Reuniones & 7\\ \hline
+Fase 5 & 284\\ \hline
+Fase 6 & 102\\ \hline
+Reuniones & 8\\ \hline
 Pruebas de carga & 11.5 \\ \hline
+Correcciones & 35.5 \\ \hline
+Prepara datos y ejecutable & 8 \\ \hline
+Experimentos con el simulador & 8 \\ \hline
+Preparar defensa TFG & 10 \\ \hline
 \hline \hline
-\noindent{\textbf{Total}} & \noindent{\textbf{410}} \\ \hline
+\noindent{\textbf{Total}} & \noindent{\textbf{569}} \\ \hline
 \end{tabular}
 \caption{Separación por horas de las distintas fases}
 \label{tabla:requisitosEtapa5}
@@ -188,7 +192,7 @@ Pruebas de carga & 11.5 \\ \hline
  
 
 \begin{figure}[H]
-\centering\includegraphics[scale=0.8]{imagenes/gantt.jpg}
+\centering\includegraphics[scale=0.6]{imagenes/gantt.jpg}
 \caption{Diagrama de Gantt de las distintas fases del proyecto}
 \label{gantt}
 \end{figure}
