--- a/docs/memoria-TFG/capitulos/01_Introduccion.tex
+++ b/docs/memoria-TFG/capitulos/01_Introduccion.tex
@@ -91,3 +91,13 @@ El contenido de la memoria está distribuido de la siguiente forma:
        \item En el capítulo 4 se expone la gestión del proyecto y las distintas etapas por las que ha pasado este proyecto
        \item En el capítulo 5 se muestran las conclusiones del proyecto y el posible trabajo futuro de cara a mejorar el simulador 
 \end{itemize}
+
+Respecto al contenido de los anexos:
+
+\begin{itemize}
+	\item En el anexo A contiene un manual de usuario.
+	\item En el anexo B se muestra todo lo referente al análisis realizado.
+	\item En el anexo C se muestra todo lo referente a la implementación realizada.
+	\item En el anexo D se muestra todo lo referente a la integración de un recomendador externo.
+	\item En el anexo E contiene un articulo presentar en las XXI Jornadas de Ingeniería del Software y Bases de Datos.
+\end{itemize}
