--- a/docs/memoria-TFG/capitulos/03_Explotacion.tex
+++ b/docs/memoria-TFG/capitulos/03_Explotacion.tex
@@ -204,7 +204,7 @@ En este apartado se describe los resultados de las pruebas de estrés realizadas
 			100.000 & 30.2 & 133 MB & 1716,46 & 547,89 & 0,182517 \\ \hline
 			500.000 & 45.4 & 138MB & 1199,38 & 382,84 & 0,261204 \\ \hline
 		\end{tabular}
-		\caption{Pruebas de estrés con 100 usuarios concurrentes}
+		\caption{Pruebas de estrés con un nivel de concurrencia 100}
 		\label{tabla:CienteUsuarios}
 	\end{center}
 \end{table}
@@ -222,7 +222,7 @@ En este apartado se describe los resultados de las pruebas de estrés realizadas
 			100.000 & 40.6 & 160MB & 1286,86 & 410,78 & 1,2172 \\ \hline
 			500.000 & 44.6 & 162 MB & n/d & n/d & n/d \\ \hline
 		\end{tabular}
-		\caption{Pruebas de estrés con 500 usuarios concurrentes}
+		\caption{Pruebas de estrés con un nivel de concurrencia 500}
 		\label{tabla:QuinientosUsuarios}
 	\end{center}
 \end{table}
@@ -240,7 +240,7 @@ En este apartado se describe los resultados de las pruebas de estrés realizadas
 			100.000 & 26.3 & 167MB & n/d & n/d & n/d \\ \hline
 			500.000 & n/d & n/d & n/d & n/d & n/d \\ \hline
 		\end{tabular}
-		\caption{Pruebas de estrés con 1000 usuarios concurrentes}
+		\caption{Pruebas de estrés con un nivel de concurrencia 1000}
 		\label{tabla:MilUsuarios}
 	\end{center}
 \end{table}
