--- a/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
+++ b/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
@@ -11,6 +11,7 @@
 \usepackage{subfig}
 \usepackage{url}
 \usepackage[utf8]{inputenc}
+%\usepackage{pdfpages}
 \usepackage[spanish]{babel}
 \usepackage[sort&compress]{natbib}
 
@@ -200,6 +201,8 @@ pdfproducer = {pdflatex}
 \input{anexos/02_Analisis}
 \input{anexos/03_Implementacion}
 \input{anexos/04_Integracion_Recomendador}
+\input{anexos/05_Articulo}
+
 
 \chapter*{}
 \thispagestyle{empty}
