--- a/docs/memoria-TFG/capitulos/05_Conclusiones.tex
+++ b/docs/memoria-TFG/capitulos/05_Conclusiones.tex
@@ -14,22 +14,27 @@ Como se puede comprobar a continuación, se han cumplido todos los objetivos mar
 	\item Se ha desarrollado un sistema bidireccional basada en eventos que permite integrar un recomendador externo y realizar simulaciones en tiempo real de tal forma que los eventos de los usuarios se reflejen en los dispositivos conectados al mismo mapa y escena.
 \end{itemize}
 
+Se espera que el trabajo desarrollado sea adaptado y extendido por el grupo SID para la realización de investigaciones en el ámbito de los sistemas de recomendación en entornos de computación móvil.
+
+Además, conjuntamente a lo realizado en este proyecto, se ha presentado un artículo (ver anexo E) a las Jornadas de Ingeniería del Software y Bases de Datos, el cual ha sido realizado en conjunción con el director del proyecto Sergio Ilarri.
+
 \section{Trabajos futuros}
 
 A continuación se proponen algunas posibles mejoras futuras:
 
 \begin{itemize}
 	\item implementar lo necesario para simular eventos sobre el mapa como pueden ser las calles cortadas, ofertas de descuentos en algún local cierto día o días de la semana etc.
+	\item implementar lo necesario para que el simulador pueda examinar en tiempo real el recomendador a integrar usando Reflection API.
 	\item implementar lo necesario para exportar los datos del mapa: tanto el grafo de carreteras como la configuración de los objetos estáticos y dinámicos.
 	\item implementar lo necesario para importar datos exportados.
-	\item implementar lo necesario para que el servidor web Node.js pueda ejecutarse sobre multiples hilos aprovechando mejor las CPUs actuales. Actualmente solo se ejecuta sobre un proceso de un solo hilo y para escalar el sistema existe la necesidad de clusterizar el servidor web.
-	\item utilizar algún framework de Javascript que nos permita desarrollar pruebas automaticas tanto al lado del cliente como al lado del servidor.
+	\item implementar lo necesario para que el servidor web Node.js pueda ejecutarse sobre múltiples hilos aprovechando mejor las CPUs actuales. Actualmente solo se ejecuta sobre un proceso de un solo hilo y para escalar el sistema existe la necesidad de clusterizar el servidor web.
+	\item utilizar algún framework de Javascript que nos permita desarrollar pruebas automáticas tanto al lado del cliente como al lado del servidor.
 \end{itemize}
 
 \section{Valoración personal}
 
-El trabajo realizado ha sido muy satisfactorio ya que me ha aportado muchos conocimientos relacionados con la rama de Sistemas de Información en la que he estado especializandome y además me ha permitido profundizar en muchas tecnologías como Node.js y Angular.js en las que he estado interesado por el auge que están sufriendo en al actualidad. Además creo los conocimientos adquiridos me dan valor añadido como futuro profesional del sector de las tecnologías de la información.
+El trabajo realizado ha sido muy satisfactorio ya que me ha aportado muchos conocimientos relacionados con la rama de Sistemas de Información en la que he estado especializándome y además me ha permitido profundizar en muchas tecnologías como Node.js y Angular.js en las que he estado interesado por el auge que están sufriendo en al actualidad. Además creo los conocimientos adquiridos me dan valor añadido como futuro profesional del sector de las tecnologías de la información.
 
-Aún así durante el tiempo de desarrollo de todo el proyecto existían preguntas que he estado haciendome continuamente. ¿Si las tecnologías y decisiones que he tomado han sido las adecuadas? ¿Es fácil de implementar y sin perder tiempo? ¿Sería fácil de mantener el sistema en el futuro? ¿Las tecnologías elegidas tendrían algún limite que no permita o dificulte la implementación de ciertas funcionalidades en el futuro? 
+Aún así durante el tiempo de desarrollo de todo el proyecto existían preguntas que he estado haciéndome continuamente. ¿Si las tecnologías y decisiones que he tomado han sido las adecuadas? ¿Es fácil de implementar y sin perder tiempo? ¿Sería fácil de mantener el sistema en el futuro? ¿Las tecnologías elegidas tendrían algún limite que no permita o dificulte la implementación de ciertas funcionalidades en el futuro? 
 
-Como conclusión personal he obtenido que no existe la perfección y de lo complicado que es desarrollar una buena aplicación. Lo que realmente importa es ser constante y comprometido con el trabajo que se está haciendo y aprender a ser autodidacta.
+Como conclusión personal he obtenido que no existe la perfección y de lo complicado que es desarrollar una buena aplicación. Lo que realmente importa es ser constante y comprometido con el trabajo que se está haciendo trabajando de forma autodidacta.
