--- a/docs/memoria-TFG/capitulos/05_Conclusiones.tex
+++ b/docs/memoria-TFG/capitulos/05_Conclusiones.tex
@@ -10,6 +10,7 @@ Como se puede comprobar a continuación, se han cumplido todos los objetivos mar
 \begin{itemize}
 	\item Se ha desarrollado un simulador de escenarios con usuarios móviles que cuenta con mapas de ciudades con objetos móviles y estáticos.
 	\item Los mapas de las ciudades utilizados en las simulaciones están creados a partir de datos reales obtenidos a través del servicio de mapas de OpenStreetMap.
+	\item Se ha desarrollado lo necesarios para que el simulador permita la simulación y recomendación de items basándose en las ubicaciones geográficas tanto de los usuarios como de los items a recomendar.
 	\item Los usuarios puedan crear, editar, borrar y configurar los mapas y escenarios del simulador.
 	\item Se ha desarrollado un sistema bidireccional basada en eventos que permite integrar un recomendador externo y realizar simulaciones en tiempo real de tal forma que los eventos de los usuarios se reflejen en los dispositivos conectados al mismo mapa y escena.
 \end{itemize}
