--- a/docs/memoria-TFG/anexos/02_Analisis.tex
+++ b/docs/memoria-TFG/anexos/02_Analisis.tex
@@ -17,6 +17,7 @@
 			RNF-5  & La interfaz gráfica debe ser responsive desarrollada con bootstrap\\ \hline
 			RNF-6  & El back-end debe ser desarrollado con node.js, sockets.io y express \\ \hline
 			RNF-7  & El front-end debe ser desarrollado con Angular.js\\ \hline
+			RNF-8  & La aplicación permitirá la integración de recomendadores de tipo PUSH y PULL\\ \hline
 		\end{tabular}
 		\caption{Requisitos no funcionales}
 		\label{tabla:requisitosNoFuncionales2}
@@ -83,6 +84,8 @@
 	RF-31 & El usuario recibirá recomendaciones sin haberlas solicitado siempre y cuando el recomendador asociado a la escena de es tipo push\\ \hline
 	RF-32 & El usuario puede arrancar/pausar una simulación\\ \hline
 	RF-33 & La aplicación permitirá al usuario generar de forma aleatoria los grafos de movimiento de los vehículos \\ \hline	
+	RF-34 & La aplicación permitirá al usuario valorar cualquier item \\ \hline	
+	RF-35 & La aplicación permitirá al usuario recibir recomendaciones de items \\ \hline
 	\caption{Requisitos funcionales}
 	\label{tabla:requisitosFuncionales2}
 \end{longtable}
