--- a/docs/memoria-TFG/capitulos/01_Introduccion.tex
+++ b/docs/memoria-TFG/capitulos/01_Introduccion.tex
@@ -13,6 +13,7 @@ El Trabajo Fin de Grado que se describe en este documento tiene los siguientes o
 \begin{itemize}
        \item Desarrollar un simulador de escenarios con usuarios móviles, que cuente con mapas de ciudades con objetos móviles y estáticos.
        \item Desarrollar lo necesario para que se permita que los mapas de ciudades sean reales de tal forma que estos sean obtenidos de un sistema que proporcione mapas.
+       \item Desarrollar lo necesario para que el simulador permita la simulación y recomendación de items teniendo en cuenta las ubicaciones geográficas de tanto de los usuarios como de los items a recomendar.
        \item Desarrollar lo necesario para que los usuarios puedan crear, editar, borrar y configurar los mapas y escenarios del simulador.
        \item Desarrollar lo necesario para que todas las configuraciones de mapas y escenarios sean parametrizables desde la interfaz de usuario.
        \item Desarrollar lo necesario para que la simulación de escenas funcione en tiempo real de tal forma que los eventos de una escena se reflejen en los dispositivos de los usuarios conectados al mismo mapa y escena.
@@ -23,11 +24,13 @@ Además de los objetivos marcados por la propuesta del Trabajo Fin de Grado, tam
 
 \section{Contexto Tecnológico}
 
-Habitualmente los sistemas de recomendación se evalúan con conjuntos de datos estáticos clásicos. El inconveniente que esto conlleva es que solo podemos realizar un análisis sobre el comportamiento de los usuarios en el pasado perdiendo la capacidad de poder calibrar correctamente los algoritmos de recomendaciones para su correcta evaluación. Con el fin de evitar este inconveniente surge la necesidad de evaluar los algoritmos de recomendaciones con conjuntos de datos dinámicos. 
+Habitualmente los sistemas de recomendación se evalúan con conjuntos de datos estáticos clásicos. El inconveniente que esto conlleva es que solo podemos realizar un análisis sobre el comportamiento de los usuarios en el pasado perdiendo la capacidad de poder calibrar correctamente los algoritmos de recomendaciones para su correcta evaluación. Con el fin de evitar este inconveniente surge la necesidad de evaluar los algoritmos de recomendaciones con conjuntos de datos dinámicos.
 
 Una de las formas de recolectar y proveer conjuntos de datos dinámicos es mediante el crowdsourcing. El crowdsourcing, también conocido como colaboración abierta distribuida, consiste en delegar tareas a un grupo de personas o comunidad a través de una convocatoria abierta. 
 
 Así que a medida que el grupo de personas o comunidad vayan realizando las tareas asignadas el sistema va recolectado y suministrando datos sobre las acciones que realizan estos para llevar a cabo sus tareas. Esto nos da la oportunidad para suministrar datos a los algoritmos de recomendaciones en tiempo real, es decir, suministrar datos a medida que el grupo de personas vayan cumpliendo con sus tareas.
+
+Cabe destacar que en este Trabajo Fin de Grado no se utiliza crowdsourcing sino se centra solo en la parte de recolección de datos en tiempo real basándose en las acciones o eventos que realizan los usuarios en el entorno de una ciudad real. De esta forma obtendremos conjuntos de datos dinámicos para la correcta calibración y evaluación de los algoritmos de recomendaciones. 
 
 \section{Herramientas utilizadas}
 
@@ -48,8 +51,7 @@ Para el desarrollo del proyecto se ha hecho uso de diversas librerías externas 
        \item {\bfseries Apache mahout v0.11.1}: framework de Java destinado al aprendizaje automático.
        \item {\bfseries socket.io-client v0.1.0}: cliente Java para socket.io desarrollado por Naoyuki Kanezawa
 \end{itemize}
-
-\newpage       
+    
 \noindent{\textbf{Herramienta de desarrollo}}\\
 
 Durante el desarrollo de este Trabajo Fin de Grado se han utilizado las siguientes herramientas:
@@ -99,5 +101,5 @@ Respecto al contenido de los anexos:
 	\item En el anexo B se muestra todo lo referente al análisis realizado.
 	\item En el anexo C se muestra todo lo referente a la implementación realizada.
 	\item En el anexo D se muestra todo lo referente a la integración de un recomendador externo.
-	\item En el anexo E contiene un articulo presentar en las XXI Jornadas de Ingeniería del Software y Bases de Datos.
+	\item En el anexo E contiene un articulo a presentar en las XXI Jornadas de Ingeniería del Software y Bases de Datos.
 \end{itemize}
