--- a/docs/memoria-TFG/capitulos/02_TrabajoDesarrollado.tex
+++ b/docs/memoria-TFG/capitulos/02_TrabajoDesarrollado.tex
@@ -6,20 +6,20 @@ En este capítulo se explican las funcionalidades básicas del simulador desarro
 
 El simulador RecSim permite representar escenarios adaptados a las necesidades de simulación existentes para evaluar distintos tipos de sistemas de recomendación. Un escenario se compone de un mapa y de un conjunto de objetos, y puede definirse sobre cualquier mapa real existente en OpenStreetMap: el usuario puede utilizar un buscador para ver un mapa y luego seleccionar dentro de dicho mapa el área geográfica de interés. Además, se pueden definir tipos de objetos estáticos (por ejemplo, restaurantes, hoteles, cines, etc.) y tipos de objetos dinámicos o móviles (por ejemplo, taxis, buses,ambulancias, etc.), asociándoles un nombre de tipo y un icono que se utilizará para representar instancias de dicho tipo de objeto en un mapa. Luego pueden colocarse en un escenario objetos estáticos y dinámicos de los tipos deseados: los objetos estáticos se colocan en la posición deseada sobre el mapa y a los objetos dinámicos se les asigna una determinada trayectoria o un comportamiento de movimientos aleatorios. Alternativamente, pueden importarse datos acerca de objetos estáticos o dinámicos definidos en ficheros externos. Sobre el mapa se representa también un usuario móvil, que puede desplazarse utilizando el teclado (sin necesidad de que el usuario real cambie físicamente de lugar) o bien desplazarse físicamente (en cuyo caso las coordenadas se obtienen de un receptor GPS ligado al equipo).
 
-Un aspecto clave es que podemos simular esos escenarios móviles y al mismo tiempo poner en funcionamiento sistemas de recomendación que proporcionan recomendaciones al usuario. El usuario puede valorar ítems, de forma que el sistema de recomendación puede ir aprendiendo los gustos del usuario y aumentando la información del conjunto de datos de valoraciones disponible. Es posible exportar resultados referentes a los errores cometidos por el sistema de recomendación al valorar ítems y generar gráficas sencillas desde el mismo simulador
+Un aspecto clave es que podemos simular esos escenarios móviles y al mismo tiempo poner en funcionamiento sistemas de recomendación que proporcionan recomendaciones al usuario. El usuario puede valorar ítems, de forma que el sistema de recomendación puede ir aprendiendo los gustos del usuario y aumentando la información del conjunto de datos de valoraciones disponible. Es posible exportar resultados referentes a los errores cometidos por el sistema de recomendación al valorar ítems y generar gráficas sencillas desde el mismo simulador.
 
 Como ejemplo, en la Figura \ref{simulacionEnAccion} se muestra una captura de pantalla donde se puede ver un fragmento del mapa de Zaragoza con un usuario móvil y varios tipos de ítems de potencial interés: hoteles, restaurantes, hospitales, y coches. En la Figura \ref{evaluacionEnAccion} se muestra un ejemplo de gráfica que ilustra los errores cometidos por el sistema de recomendación al estimar la valoración de varios ítems.
 
-\begin{figure}[h]
-\centering
-\subfloat[Captua del simulador en acción]{
+\begin{figure}[H]
+	\centering\includegraphics[scale=0.35]{imagenes/resumen-simulador.jpg}
+	\caption{Captura del simulador en acción}
 	\label{simulacionEnAccion}
-	\includegraphics[width=0.55\textwidth]{imagenes/resumen-simulador.jpg}}
-\subfloat[Errores cometidos por el sistema de recomendación]{
+\end{figure}
+
+\begin{figure}[H]
+	\centering\includegraphics[scale=0.45]{imagenes/explotacion/simulacion/errores-slavcho.jpg}
+	\caption{Errores cometidos por el sistema de recomendación}
 	\label{evaluacionEnAccion}
-	\includegraphics[width=0.35\textwidth]{imagenes/capitulo12/evaluacion.png}}
-\caption{Simulador RecSim}
-\label{recSim}
 \end{figure}
 
 \section{Análisis de requisitos}
@@ -39,6 +39,7 @@ Como ejemplo, en la Figura \ref{simulacionEnAccion} se muestra una captura de pa
 			RNF-5  & La interfaz gráfica debe ser responsive desarrollada con bootstrap\\ \hline
 			RNF-6  & El back-end debe ser desarrollado con node.js, sockets.io y express \\ \hline
 			RNF-7  & El front-end debe ser desarrollado con Angular.js\\ \hline
+			RNF-8  & La aplicación permitirá la integración de recomendadores de tipo PUSH y PULL\\ \hline
 		\end{tabular}
 		\caption{Requisitos no funcionales}
 		\label{tabla:requisitosNoFuncionales}
@@ -105,6 +106,8 @@ Como ejemplo, en la Figura \ref{simulacionEnAccion} se muestra una captura de pa
 	RF-31 & El usuario recibirá recomendaciones sin haberlas solicitado siempre y cuando el recomendador asociado a la escena de es tipo push\\ \hline
 	RF-32 & El usuario puede arrancar/pausar una simulación\\ \hline
 	RF-33 & La aplicación permitirá al usuario generar de forma aleatoria los grafos de movimiento de los vehículos \\ \hline	
+	RF-34 & La aplicación permitirá al usuario valorar cualquier item \\ \hline	
+	RF-35 & La aplicación permitirá al usuario recibir recomendaciones de items \\ \hline	
 	\caption{Requisitos funcionales}
 	\label{tabla:requisitosFuncionales}
 \end{longtable}
@@ -120,7 +123,7 @@ El la figura \ref{arquitecturaComponentes} observamos que el navegador web se co
 El sistema bidireccional dirigido por eventos es utilizado  durante la simulación por una parte para reflejar los eventos generados por un usuario al resto de usuarios, y por otra para integrar el navegador, el servidor Node.js y el recomendador. De esta manera conseguimos compartir información entre los distintos componentes sin que estos los hayan solicitado evitando muchas peticiones innecesarias.
 
 \begin{figure}[H]
-\centering\includegraphics[scale=0.4]{imagenes/arquitectura-componentes.png}
+\centering\includegraphics[scale=0.5]{imagenes/arquitectura-componentes.png}
 \caption{Arquitectura de componentes del sistema}
 \label{arquitecturaComponentes}
 \end{figure}
