--- a/docs/memoria-TFG/anexos/05_Articulo.tex
+++ b/docs/memoria-TFG/anexos/05_Articulo.tex
@@ -2,4 +2,6 @@
 
 En este anexo se adjunta una copia del artículo presentado a las Jornadas de Ingeniería del Software y Bases de Datos, el cual ha sido realizado en conjunción con el director del proyecto Sergio Ilarri.
 
-%\includepdf[pages=inicial-final]{nombre_del_documento}
+\includepdf[pages=-]{escaneos/Scan1.pdf}
+\includepdf[pages=-]{escaneos/Scan2.pdf}
+\includepdf[pages=-]{escaneos/jisbd2016.pdf}
