--- a/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
+++ b/docs/memoria-TFG/memoria-TFG-Slavcho-Ivanov.tex
@@ -164,7 +164,7 @@ pdfproducer = {pdflatex}
 \begin{document}
 \input{portada/portada}
 \input{prefacios/prefacio}
-%\includepdf[pages=-]{original.pdf}
+\includepdf[pages=-]{escaneos/Scan3.pdf}
 \frontmatter
 \tableofcontents
 \listoffigures
